# Omni-Agent-Platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard-ui/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard-ui/src/: App.jsx  index.css
dashboard-ui/src/app/: globals.css  layout.js  page.js
dashboard-ui/src/components/: Header.js  Sidebar.js  StatCard.js  TicketCard.js  TicketCard.jsx
dashboard-ui/src/hooks/: useWebSocket.js
dashboard-ui/src/lib/: api.js
newcons/: __init__.py  main.py  seed_test_data.py  test_full_system.py  test_multimodal_pipeline.py  test_recommendation_engine.py  test_ticket_pipeline.py
newcons/agent/: __init__.py  graph.py  graph_brain.py  ticket_models.py  ticket_pipeline.py  ticket_tools.py  tools.py
newcons/agent/pipelines/: __init__.py  ticket.py
newcons/algorithms/: __init__.py  linucb.py
newcons/api/: deps.py  schemas.py  server.py
newcons/api/v1/: __init__.py  chat.py  dashboard.py  feedback.py  ingest.py  tenants.py  ws.py
newcons/core/: __init__.py  database.py  exceptions.py  logger.py  models.py  security.py  settings.py  tenant.py
newcons/core/models/: __init__.py  base.py  feedback.py  tenant.py  ticket.py
newcons/domains/: __init__.py  base.py  registry.py
newcons/engine/: __init__.py  ingestion.py  ingestion_pipeline.py  processors.py  rag_pipeline.py  vector_store.py
newcons/perception/: nlp_pipeline.py
newcons/services/: chat_service.py  dashboard_service.py  ingest_service.py  ticket_service.py  websocket_manager.py
(+11 files in other folders)
