[project]
name = "omni-agent-platform"
version = "3.0.0"
description = "B2B Game Ops AI Platform — Multi-tenant, Domain-pluggable"
requires-python = ">=3.10"
dependencies = [
    # ── LLM / Agent ──
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "dashscope>=1.14.0",
    "duckduckgo-search>=6.0.0",

    # ── API Server ──
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",

    # ── Database ──
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",

    # ── Config ──
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # ── ML / Algorithms ──
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "chromadb>=0.5.0",

    # ── Multimodal ──
    "docling>=2.0.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "opencv-python>=4.9.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
